LayoutTests/resources/ui-helper.js
@@ -19,6 +19,19 @@ window.UIHelper = class UIHelper {
         eventSender.mouseUp();
     }
 
+    static doubleClickAtMouseDown(x1, y1)
+    {
+        eventSender.mouseMoveTo(x1, y1);
+        eventSender.mouseDown();
+        eventSender.mouseUp();
+        eventSender.mouseDown();
+    }
+
+    static mouseUp()
+    {
+        eventSender.mouseUp();
+    }
+
     static doubleClickAtThenDragTo(x1, y1, x2, y2)
     {
         eventSender.mouseMoveTo(x1, y1);
@@ -27,6 +40,28 @@ window.UIHelper = class UIHelper {
         eventSender.mouseDown();
         eventSender.mouseMoveTo(x2, y2);
         eventSender.mouseUp();
+    }
+
+    static dragMouseAcrossElement(element)
+    {
+        const x1 = element.offsetLeft + element.offsetWidth;
+        const x2 = element.offsetLeft + element.offsetWidth * .75;
+        const x3 = element.offsetLeft + element.offsetWidth / 2;
+        const x4 = element.offsetLeft + element.offsetWidth / 4;
+        const x5 = element.offsetLeft;
+        const y = element.offsetTop + element.offsetHeight / 2;
+        eventSender.mouseMoveTo(x1, y);
+        eventSender.mouseMoveTo(x2, y);
+        eventSender.mouseMoveTo(x3, y);
+        eventSender.mouseMoveTo(x4, y);
+        eventSender.mouseMoveTo(x5, y);
+    }
+
+    static doubleClickElementMouseDown(element1)
+    {
+        const x1 = element1.offsetLeft + element1.offsetWidth / 2;
+        const y1 = element1.offsetTop + element1.offsetHeight / 2;
+        return UIHelper.doubleClickAtMouseDown(x1, y1);
     }
 
     static async moveMouseAndWaitForFrame(x, y)
